--- a/index.html
+++ b/index.html
@@ -32,17 +32,9 @@
 		<h1 data-aos="zoom-in-down" data-aos-delay="100">Find the right freelance service</h1>
 		<input type="text" name="" placeholder="Search here...">
 		<button><i class="fa fa-search"></i></button>
-		<div class="icon">
-			<i class="fa fa-search"></i>
-			
-			<div class="popular">
-				<a>Website</a>
-			</div>
-		</div>
-		<div>
-			<a>Our populars</a>
-		</div>
+	
 		
+	
 	</section>
 </header>
 
@@ -88,9 +80,92 @@
 		</div>
 	
 </section>
+<!-- extra -->
+<section class="blog">
+	<h2>Know more about BR-ief</h2>
+	<article>
+	  <h3>Service Model</h3>
+	  <p>We understand that every business is different, which is why we take a customized approach to website design. We work closely with our clients to understand their mission & vision, target audience, and brand identity, and create a website of their requirement. </p>
+	  <a href="#">Read More</a>
+	</article>
+	<article>
+	  <h3>Affordable pricing
+	</h3>
+	  <p>
+		We offer affordable pricing for our website design services, without compromising on quality. We work with businesses of all sizes and budgets to create a website that fits their needs.</p>
+	  <a href="#">Read More</a>
+	</article>
+  </section>
+  
 
 
+
+
+
+  
 <!--- filter gallery end---->
+<div class="pricing-section">
+	<div class="pricing-table-3 basic">
+	  <div class="pricing-table-header">
+		<h4><strong>BASIC</strong></h4>
+		<p>Lorem ipsum dolor sit amet.</p>
+	  </div>
+	  <div class="price"><strong>$3</strong> / MONTH</div>
+	  <div class="pricing-body">
+		<ul class="pricing-table-ul">
+		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
+		  <li><i class="fa fa-cloud"></i> 50 GB Disk Space</li>
+		  <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
+		  <li class="not-avail"><i class="fa fa-clock-o"></i> 24X7 Support</li>
+		  <li class="not-avail"><i class="fa fa-envelope"></i> Email Support</li>
+		</ul>
+		<a href="#" class="view-more">View More</a>
+	  </div>
+	</div>
+  
+	<div class="pricing-table-3 premium">
+	  <div class="pricing-table-header">
+		<h4><strong>PREMIUM</strong></h4>
+		<p>Lorem ipsum dolor sit amet.</p>
+	  </div>
+	  <div class="price"><strong>$8</strong> / MONTH</div>
+	  <div class="pricing-body">
+		<ul class="pricing-table-ul">
+		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
+		  <li><i class="fa fa-cloud"></i> 80 GB Disk Space</li>
+		  <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
+		  <li><i class="fa fa-clock-o"></i> 24X7 Support</li>
+		  <li><i class="fa fa-envelope"></i> Email Support</li>
+		</ul>
+		<a href="#" class="view-more">View More</a>
+	  </div>
+	</div>
+  
+	<div class="pricing-table-3 business">
+	  <div class="pricing-table-header">
+		<h4><strong>BUSINESS</strong></h4>
+		<p>Lorem ipsum dolor sit amet.</p>
+	  </div>
+	  <div class="price"><strong>$12</strong> / MONTH</div>
+	  <div class="pricing-body">
+		<ul class="pricing-table-ul">
+		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
+		  <li><i class="fa fa-cloud"></i> 120 GB Disk Space</li>
+		  <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
+		  <li><i class="fa fa-clock-o"></i> 24X7 Support</li>
+		  <li><i class="fa fa-envelope"></i> Email Support</li>
+		</ul>
+		<a href="#" class="view-more">View More</a>
+	  </div>
+	</div>
+  </div>
+
+  
+
+
+
+
+
 
 <!-- slider start--->
 
@@ -103,17 +178,19 @@
 
 <div class="member-card"  data-aos="zoom-in-down" data-aos-offset="100" data-aos-delay="300">
 	
-
+    <img src="img/881.png">
 	<img src="img/subham.jpg">
-	<h2>Subham</h2>
+	<h2>
+	Harshvardhan    Shubham
+	</h2>
 	 
-	<img src="img/member.png">
-	<img src="img/member.png">
+	
+	
 
 	<p>
- 			From Rajasthan,doing gym is good for healthy life. it helps our body to fit. it release stress from our mind.From Rajasthan,doing gym is good for healthy life. it helps our body to fit. it release stress from our mind.
+		Our team of web designers and developers have years of experience and expertise in creating beautiful, functional websites. We stay up-to-date with the latest technologies and trend to make surer that our clients receive the best service.
 	</p>
-	<h2>* subham </h2>
+	
 
 	<img src="img/icon1.png" width="100">
 	<img src="img/icon2.png" width="100">
