--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Photoweb</title>
+	<title>BR-ief</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -42,9 +42,9 @@
 	<div class="portfolio-menu">
 			<ul>
 				<li class="active" data-filter="*"> All</li>
-				<li data-filter=".web"> Nature</li>
-				<li data-filter=".seo">Faishon</li>
-				<li data-filter=".graphics">Wedding</li>
+				<li data-filter=".web">LOGO</li>
+				<li data-filter=".seo">POSTER</li>
+				<li data-filter=".graphics">WEBSITE</li>
 			</ul>
 		</div>
 		<div class="portfolio-item">
@@ -80,6 +80,55 @@
 		</div>
 	
 </section>
+
+
+
+<section id="services">
+	<h2>My Services</h2>
+	<ul>
+		<li>UI/UX</li>
+		<li>Web Design</li>
+		<li>App Development</li>
+		<li>Graphic Design</li>
+		<li>Animation Video</li>
+		<li>Social Media Creatives</li>
+		<li>Festival Creatives</li>
+		<li>Important Days Creatives</li>
+		<li>Organizational Creatives</li>
+		<li>On Demand Creatives</li>
+		<li>Company Representation</li>
+		<li>Data Visualization</li>
+		<li>Project Presentation</li>
+		<li>Info-graphics</li>
+		<li>Portfolio Designing</li>
+		<li>PPT Template</li>
+		<li>Advertisement / Print Materials</li>
+		<li>Leaflets Design</li>
+		<li>Flyer Design</li>
+		<li>Poster Design</li>
+		<li>Hoardings</li>
+		<li>News Add Design</li>
+		<li>Magazine Design</li>
+		<li>Catalogue / Menu Design</li>
+		<li>Brand Identity</li>
+		<li>Logo Design</li>
+		<li>Company Profile</li>
+		<li>Leveling</li>
+		<li>Portfolio, Brochure Design</li>
+		<li>Personalized Printing</li>
+		<li>Marketing</li>
+		<li>Email Marketing</li>
+		<li>Content Marketing</li>
+		<li>Mobile Marketing</li>
+		<li>App Development</li>
+		<li>Portfolio, Brochure Design</li>
+
+	
+</section>
+
+
+
+
 <!-- extra -->
 <section class="blog">
 	<h2>Know more about BR-ief</h2>
@@ -102,7 +151,7 @@
 
 
 
-  
+
 <!--- filter gallery end---->
 <div class="pricing-section">
 	<div class="pricing-table-3 basic">
@@ -216,8 +265,8 @@
 <footer>
 	<div class="newsletter">
 		<div data-aos="fade-up" data-aos-offset="200">
-			<h2>Subscribe our newsletter</h2>
-			<p>We’re a team of non-cynics who truly care for our work.</p>
+			<h2>Subscribe our BR-ief</h2>
+			<p>We’re a team of hardworking professionals.</p>
 		</div>
 		<div class="n-text" data-aos="fade-up-right" data-aos-offset="200">
 			<label>
@@ -232,7 +281,8 @@
 	<div class="f-contact" data-aos="zoom-in-up" data-aos-offset="200">
 		<div>
 			<h1>Information</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur elit. Nihil sit dicta.</p>
+			<p>DEVELOPER </p>
+			<p>Harshvardhan </p>
 			
 			<i class="fa fa-whatsapp"></i>
 			<i class="fa fa-instagram"></i>
