--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 
 
 
+
+
 <section id="services">
 	<h2>My Services</h2>
 	<ul>
@@ -121,7 +123,8 @@
 		<li>Content Marketing</li>
 		<li>Mobile Marketing</li>
 		<li>App Development</li>
-		<li>Portfolio, Brochure Design</li>
+		<li>Portfolio, Brochure Design
+</li>
 
 	
 </section>
@@ -130,22 +133,22 @@
 
 
 <!-- extra -->
+
 <section class="blog">
-	<h2>Know more about BR-ief</h2>
-	<article>
-	  <h3>Service Model</h3>
-	  <p>We understand that every business is different, which is why we take a customized approach to website design. We work closely with our clients to understand their mission & vision, target audience, and brand identity, and create a website of their requirement. </p>
-	  <a href="#">Read More</a>
-	</article>
-	<article>
-	  <h3>Affordable pricing
-	</h3>
-	  <p>
-		We offer affordable pricing for our website design services, without compromising on quality. We work with businesses of all sizes and budgets to create a website that fits their needs.</p>
-	  <a href="#">Read More</a>
-	</article>
-  </section>
-  
+  <h2 class="blog-title">Know More About BR-ief</h2>
+  <div class="blog-container">
+    <div class="blog-content">
+      <h3 class="blog-subtitle">Service Model</h3>
+      <p>We understand that every business is different, which is why we take a customized approach to website design. We work closely with our clients to understand their mission & vision, target audience, and brand identity, and create a website of their requirement.</p>
+      <a href="#" class="blog-link">Read More</a>
+    </div>
+    <div class="blog-content">
+      <h3 class="blog-subtitle">Affordable Pricing</h3>
+      <p>We offer affordable pricing for our website design services, without compromising on quality. We work with businesses of all sizes and budgets to create a website that fits their needs.</p>
+      <a href="#" class="blog-link">Read More</a>
+    </div>
+  </div>
+</section>
 
 
 
@@ -209,7 +212,15 @@
 	</div>
   </div>
 
+
+
+  <!-- animation -->
   
+  
+
+
+
+
 
 
 
