--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 	<div class="pricing-table-3 basic">
 	  <div class="pricing-table-header">
 		<h4><strong>BASIC</strong></h4>
-		<p>Lorem ipsum dolor sit amet.</p>
+		<p>Social Media handle</p>
 	  </div>
-	  <div class="price"><strong>$3</strong> / MONTH</div>
+	  <div class="price"><strong>₹10000</strong> / MONTH</div>
 	  <div class="pricing-body">
 		<ul class="pricing-table-ul">
 		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
@@ -178,9 +178,9 @@
 	<div class="pricing-table-3 premium">
 	  <div class="pricing-table-header">
 		<h4><strong>PREMIUM</strong></h4>
-		<p>Lorem ipsum dolor sit amet.</p>
+		<p>Social Media handle + Marketing</p>
 	  </div>
-	  <div class="price"><strong>$8</strong> / MONTH</div>
+	  <div class="price"><strong>₹15000</strong> / MONTH</div>
 	  <div class="pricing-body">
 		<ul class="pricing-table-ul">
 		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
@@ -196,9 +196,9 @@
 	<div class="pricing-table-3 business">
 	  <div class="pricing-table-header">
 		<h4><strong>BUSINESS</strong></h4>
-		<p>Lorem ipsum dolor sit amet.</p>
+		<p>Branding</p>
 	  </div>
-	  <div class="price"><strong>$12</strong> / MONTH</div>
+	  <div class="price"><strong>₹20000</strong> / MONTH</div>
 	  <div class="pricing-body">
 		<ul class="pricing-table-ul">
 		  <li><i class="fa fa-send"></i> Unlimited Email Addresses</li>
